# acid-state

./: .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  README.md  acid-state.cabal  appveyor.yml  cabal.haskell-ci  cabal.project  cabal.project.local  default.nix  release.nix  stack.yaml
.github/workflows/: haskell-ci.yml
acid-state/: CHANGELOG.md  acid-state.cabal
acid-state-internal/: acid-state-internal.cabal
acid-state-internal/src-unix/Data/Acid/Internal/: FileIO.hs
acid-state-internal/src-win32/Data/Acid/Internal/: FileIO.hs
acid-state-internal/src/Data/Acid/: Abstract.hs  Common.hs  Log.hs  Memory.hs
acid-state-internal/src/Data/Acid/Internal/: Abstract.hs  Archive.hs  CRC.hs  Common.hs  Core.hs  Local.hs  Log.hs  Memory.hs  TemplateHaskell.hs
acid-state-internal/src/Data/Acid/Internal/Memory/: Pure.hs
acid-state-internal/src/Data/Acid/Memory/: Pure.hs
acid-state-tests/: acid-state-tests.cabal
acid-state-tests/src/Data/Acid/Test/: StateMachine.hs
acid-state/benchmarks/loading/: Benchmark.hs
acid-state/examples/: CheckpointCutsEvent.hs  Examples.hs  HelloDatabase.hs  KeyValueNoTH.hs  MonadStateConstraint.hs  ParameterisedState.hs  RemoteClient.hs  RemoteServer.hs  SlowCheckpoint.hs  StressTestNoTH.hs
acid-state/examples/errors/: ChangeState.hs  ChangeVersion.hs  RemoveEvent.hs
acid-state/src-win32/: FileIO.hs
acid-state/src/Data/Acid/: Abstract.hs  Advanced.hs  Archive.hs  Common.hs  Core.hs  Local.hs  Log.hs  Memory.hs  Remote.hs  TemplateHaskell.hs
acid-state/src/Data/Acid/Memory/: Pure.hs
acid-state/test/: StateMachine.hs
acid-state/test/Data/Acid/: StateMachineTest.hs  TemplateHaskellSpec.hs
benchmarks/loading/: Benchmark.hs
benchmarks/loading/Benchmark/: FileSystem.hs  Interface.hs  Model.hs  Prelude.hs
examples/: CheckpointCutsEvent.hs  Examples.hs  HelloDatabase.hs  HelloWorld.hs  HelloWorldNoTH.hs  KeyValue.hs  KeyValueNoTH.hs  Locking.hs  MonadStateConstraint.hs  ParameterisedState.hs  Proxy.hs  RemoteClient.hs  RemoteClientTLS.hs  RemoteCommon.hs  RemoteCommonTLS.hs  RemoteServer.hs  RemoteServerTLS.hs  SlowCheckpoint.hs  StressTest.hs  StressTestNoTH.hs
examples/errors/: ChangeState.hs  ChangeVersion.hs  Exceptions.hs  RemoveEvent.hs
examples/ssl/: test.crt  test.csr  test.key  test.key.org
repair/: Main.hs
src-7.10/GHC/: Stack.hs
src-unix/: FileIO.hs
src-win32/: FileIO.hs
src/Data/: Acid.hs
src/Data/Acid/: Abstract.hs  Advanced.hs  Archive.hs  Common.hs  Core.hs  Local.hs  Log.hs  Memory.hs  Remote.hs  Repair.hs  Replication.hs  TemplateHaskell.hs
src/Data/Acid/Memory/: Pure.hs
src/Data/Acid/Remote/: TLS.hs
src/Data/State/: Acid.hs
src/Data/State/Acid/: Archive.hs  CRC.hs  Core.hs  Local.hs  Log.hs  TemplateHaskell.hs
test/Data/Acid/: KeyValueStateMachine.hs  StateMachineTest.hs  TemplateHaskellSpec.hs
