Name:                acid-state
Version:             0.11.1
Synopsis:            Add ACID guarantees to any serializable Haskell data structure.
Description:         Use regular Haskell data structures as your database and get stronger ACID guarantees than most RDBMS offer.
Homepage:            http://acid-state.seize.it/
License:             PublicDomain
Author:              David Himmelstrup
Maintainer:          Lemmih <lemmih@gmail.com>
-- Copyright:
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.6
Extra-source-files:
        examples/*.hs
        examples/errors/*.hs
        src-win32/*.hs
        src-unix/*.hs

Source-repository head
  type:          darcs
  location:      http://hub.darcs.net/Lemmih/acid-state

Library
  Exposed-Modules:     Data.Acid,
                       Data.Acid.Local, Data.Acid.Memory,
                       Data.Acid.Memory.Pure, Data.Acid.Remote,
                       Data.Acid.Advanced

  Other-modules:       Data.Acid.Log, Data.Acid.Archive,
                       Data.Acid.CRC, Paths_acid_state,
                       Data.Acid.TemplateHaskell, Data.Acid.Common, FileIO,
                       Data.Acid.Abstract, Data.Acid.Core

  Build-depends:       array,
                       base >= 4 && < 5,
                       bytestring >= 0.9.1.8,
                       cereal >= 0.3.2.0,
                       containers,
                       extensible-exceptions,
                       safecopy >= 0.6,
                       stm,
                       directory,
                       filepath,
                       mtl,
                       network,
                       template-haskell

  if os(windows)
     Build-depends:       Win32
  else
     Build-depends:       unix

  Hs-Source-Dirs:      src/

  if os(windows)
     Hs-Source-Dirs:   src-win32/
  else
     Hs-Source-Dirs:   src-unix/

  GHC-Options:         -fwarn-unused-imports -fwarn-unused-binds
