Name:                acid-state
Version:             0.11.4
Synopsis:            Add ACID guarantees to any serializable Haskell data structure.
Description:         Use regular Haskell data structures as your database and get stronger ACID guarantees than most RDBMS offer.
Homepage:            http://acid-state.seize.it/
License:             PublicDomain
Author:              David Himmelstrup
Maintainer:          Lemmih <lemmih@gmail.com>
-- Copyright:
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:
        examples/*.hs
        examples/errors/*.hs
        src-win32/*.hs
        src-unix/*.hs

Source-repository head
  type:          git
  location:      https://github.com/acid-state/acid-state

Library
  Exposed-Modules:     Data.Acid,
                       Data.Acid.Local, Data.Acid.Memory,
                       Data.Acid.Memory.Pure, Data.Acid.Remote,
                       Data.Acid.Advanced

  Other-modules:       Data.Acid.Log, Data.Acid.Archive,
                       Data.Acid.CRC, Paths_acid_state,
                       Data.Acid.TemplateHaskell, Data.Acid.Common, FileIO,
                       Data.Acid.Abstract, Data.Acid.Core

  Build-depends:       array,
                       base >= 4 && < 5,
                       bytestring >= 0.10,
                       cereal >= 0.3.2.0,
                       containers,
                       extensible-exceptions,
                       safecopy >= 0.6,
                       stm,
                       directory,
                       filepath,
                       mtl,
                       network,
                       template-haskell

  if os(windows)
     Build-depends:       Win32
  else
     Build-depends:       unix

  Hs-Source-Dirs:      src/

  if os(windows)
     Hs-Source-Dirs:   src-win32/
  else
     Hs-Source-Dirs:   src-unix/

  default-language:    Haskell2010
  GHC-Options:         -fwarn-unused-imports -fwarn-unused-binds



benchmark loading-benchmark
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    benchmarks/loading
  main-is:
    Benchmark.hs
  build-depends:
    random,
    directory,
    system-fileio == 0.3.*,
    system-filepath,
    criterion == 0.8.*,
    mtl,
    base,
    acid-state
  default-language:
    Haskell2010
  default-extensions:
    PatternGuards
    GADTs
    StandaloneDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    FlexibleInstances
    TypeFamilies
    TypeOperators
    FlexibleContexts
    NoImplicitPrelude
    EmptyDataDecls
    DataKinds
    NoMonomorphismRestriction
    RankNTypes
    ConstraintKinds
    DefaultSignatures
    TupleSections
    TemplateHaskell
    OverloadedStrings
    DeriveDataTypeable
  ghc-options:
    -O2
