Name:                acid-state-tests
Version:             0.16.0
Synopsis:            Test infrastructure for the acid-state package
Description:         Use regular Haskell data structures as your database and get stronger ACID guarantees than most RDBMS offer. This package provides internal utilities for the acid-state package and related packages. You are unlikely to need to depend on it directly.
Homepage:            https://github.com/acid-state/acid-state
License:             PublicDomain
Author:              David Himmelstrup
Maintainer:          Lemmih <lemmih@gmail.com>
-- Copyright:
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

Source-repository head
  type:          git
  location:      https://github.com/acid-state/acid-state
  subdir:        acid-state-tests

Library
  Exposed-Modules:     Data.Acid.Test.StateMachine

  Build-depends:       acid-state-internal == 0.16.0,
                       base >= 4.5.1.0 && < 5,
                       deepseq >= 1.4.0.0,
                       directory,
                       hedgehog,
                       mtl

  Hs-Source-Dirs:      src/

  default-language:    Haskell2010
  GHC-Options:         -Wall

  -- Cannot build on older versions due to hedgehog's transitive dependencies;
  -- using `buildable: false` here means `cabal new-build all` will simply skip
  -- this package and the tests that depend on it.
  if impl(ghc < 7.10)
    buildable: False
